--- a/res/scss/view/_list-item.scss
+++ b/res/scss/view/_list-item.scss
@@ -5,7 +5,7 @@
 
   .thumbnails.optimized
   {
-    position: relative;
+//    position: relative;
 
     .totals {
 
